@@ -40,6 +40,7 @@ HOSTS:
       - client
       - unknownclient
       - logdest
+      - ldapserver
     platform:   el-7-x86_64
     box:        centos/7
     hypervisor: vagrant
